feat: add endpoint /meals/{id}
